# mergev

./: .gitignore  AGENTS.md  CHANGELOG.md  README.en.md  README.md  index.html  package-lock.json  package.json  release-please-config.json  tsconfig.json  tsup.config.ts  vite.config.ts  vitest.config.ts
.baoyu-skills/baoyu-article-illustrator/: EXTEND.md
.baoyu-skills/baoyu-cover-image/: EXTEND.md
.baoyu-skills/baoyu-post-to-wechat/: EXTEND.md
.github/: release.yml
.github/workflows/: ci.yml  publish-desktop.yml  release-please.yml  test-coverage.yml
docs/: IMPLEMENTATION_SUMMARY.md  OPTIMIZATION.md  PLAN.md  PRODUCT.md  SHIKI_HIGHLIGHT_PLAN.md  TECH.md  THEME_SWITCH_PLAN.md  THREE_PANE_IMPLEMENTATION.md
docs/PRODUCT-zh-CN/: 01-analysis.md  02-prompt.md  translation.md
scripts/: release.ts
src/: App.css  App.tsx  FirstLaunchDialog.css  FirstLaunchDialog.tsx  renderTokens.ts  syntaxHighlight.ts  theme.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: generate-mergev-icon.swift  icon.icns
src-tauri/src/: cli.rs  first_launch.rs  git.rs  lib.rs  main.rs  repository_history.rs  workspace.rs
src/app/: index.ts  open.ts  save.ts
src/cli/: index.ts
src/components/: GitBranchIcon.tsx  RepositoryAvatar.tsx  RepositoryListContent.tsx  StatusCell.tsx
src/config/: options.ts
src/core/: mergeSession.ts
src/editor/: editor.ts  index.ts
src/git/: git.ts  index.ts  types.ts
src/hooks/: useHomeDir.ts  useLinkedPaneScroll.ts
src/merge/: index.ts  model.ts  types.ts  viewport.ts
src/screens/: CombinedScreen.tsx  MergeScreen.tsx  (+2 more)
(+31 files in other folders)
